fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -93,7 +93,7 @@ nav {
     position: absolute;
     top: 0;
     height: 100%;
-    width: 100%;
+    width: 100vh;
     object-fit: cover;
 }
 
